--- a/app/src/main/res/layout/add_expense_bottomsheet.xml
+++ b/app/src/main/res/layout/add_expense_bottomsheet.xml
@@ -3,8 +3,7 @@
   ~ Copyright (c) 2020. This code is created and written by Ariful Jannat Arif on 3/7/20 9:10 AM
   -->
 
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:id="@+id/main_view"
@@ -84,8 +83,8 @@
             android:layout_height="@dimen/transaction_item_border_height"/>
         <TextView
             android:gravity="center_vertical"
-            android:layout_alignBottom="@id/type"
-            android:layout_alignTop="@id/type"
+            android:layout_alignBottom="@id/add_sel_catagory"
+            android:layout_alignTop="@id/add_sel_catagory"
             android:id="@+id/type_hint"
             android:textSize="@dimen/input_hint_ts"
             android:text="Type"
@@ -94,12 +93,12 @@
         <Spinner
             style="@style/addexpensespinnerstyle"
             android:layout_below="@id/amount"
-            android:id="@+id/type"
+            android:id="@+id/add_sel_catagory"
             android:layout_alignParentEnd="true"
             android:layout_width="wrap_content"
             android:layout_height="@dimen/spinner_height"/>
         <View
-            android:layout_below="@id/type"
+            android:layout_below="@id/add_sel_catagory"
             android:background="@color/add_expense_border_color"
             android:layout_width="match_parent"
             android:layout_height="@dimen/transaction_item_border_height"/>
@@ -114,7 +113,7 @@
             android:layout_height="wrap_content"/>
         <Spinner
             style="@style/addexpensespinnerstyle"
-            android:layout_below="@id/type"
+            android:layout_below="@id/add_sel_catagory"
             android:id="@+id/catagory"
             android:layout_alignParentEnd="true"
             android:layout_width="wrap_content"
@@ -134,13 +133,35 @@
             android:text="Date"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
-        <Spinner
-            style="@style/addexpensespinnerstyle"
+        <com.google.android.material.chip.ChipGroup
+            android:orientation="horizontal"
+            app:singleSelection="true"
+            android:layout_marginLeft="70dp"
             android:layout_below="@id/catagory"
             android:id="@+id/date"
             android:layout_alignParentEnd="true"
             android:layout_width="wrap_content"
-            android:layout_height="@dimen/spinner_height"/>
+            android:layout_height="wrap_content">
+            <com.google.android.material.chip.Chip
+                android:gravity="center_vertical|end"
+                style="@style/Widget.MaterialComponents.Chip.Filter"
+                android:text="Today"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+            <com.google.android.material.chip.Chip
+                android:gravity="center_vertical|end"
+                style="@style/Widget.MaterialComponents.Chip.Filter"
+                android:text="Yesterday"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+
+            <com.google.android.material.chip.Chip
+                android:gravity="center_vertical|end"
+                style="@style/Widget.MaterialComponents.Chip.Filter"
+                android:text="select"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+        </com.google.android.material.chip.ChipGroup>
         <View
             android:layout_alignParentEnd="true"
             android:layout_alignParentStart="true"
